# libdpcp

./: configure.ac  dpcp.vcxproj
.ci/: antivirus.sh  do_release.sh  job_matrix.yaml  proj_jjb.yaml
.ci/dockerfiles/: Dockerfile.rhel8.6.release
.ci/pipeline/: dr_weekly_matrix.yaml  release_jjb.yaml  release_matrix_job.yaml
.ci/scripts/: doca_install.sh
.ci/windows/: windows_proj_jjb.yaml
.dockers/: Dockerfile.ctyunos23.01  Dockerfile.oel8.6  Dockerfile.oel8.7  Dockerfile.oel9.2  Dockerfile.oel9.6  Dockerfile.rhel9.2  Dockerfile.rhel9.6
cmake/: DpcpConfig.cmake  FindVerbs.cmake
contrib/: build_pkg.sh
contrib/jenkins_tests/: copyrights.sh  globals.sh
contrib/scripts/: dpcp.spec.in
src/: Makefile.am
src/api/: dpcp.h
src/dcmd/: prm.h
src/dcmd/base/: base_ctx.h
src/dcmd/linux/: compchannel.cpp  compchannel.h  ctx.h  def.h  provider.cpp
src/dcmd/windows/: compchannel.cpp  compchannel.h  ctx.cpp  ctx.h  provider.cpp
src/dpcp/: CMakeLists.txt  adapter.cpp  dek.cpp  eq.cpp  err_cqe.cpp  flow_action.cpp  flow_group.cpp  flow_rule_ex.cpp  flow_table.cpp  fr.cpp  rq.cpp  sq.cpp
src/utils/windows/: utils.h
tests/gtest/: CMakeLists.txt  Makefile.am  dpcp-gtest.vcxproj  dpcp-gtest.vcxproj.filters
tests/gtest/dcmd/: dcmd_compchannel.cpp
tests/gtest/dpcp/: CMakeLists.txt  adapter_tests.cpp  dpcp_base.cpp  err_cqe_tests.cpp
